--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 	<head>
 		<link rel="stylesheet" href="assets/css/reset.css">
+		<title>Star Wars RPG!</title>
 		<link href="https://fonts.googleapis.com/css?family=Antic+Slab|Marcellus+SC|Share" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous">
 		</script>
+		<script type="text/javascript" src="assets/javascript/game.js"></script>
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 
@@ -123,6 +125,10 @@
 		</div>
 
 	</div>
+
+	<footer>
+	</footer>
+
 	</body>
 
 </html>
