pushing latest version up

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 		</div>
 		<div class="row">
 			<div class="col-md-2">
-			 	<div id="yourChar"></div>
+			 	<div id="yourChar">
+			 	<!--	<p id="yourCharName"></p>
+					<img id="yourCharImg">
+					<p id="yourCharHPCounter"></p> -->
+			 	</div>
 			 </div>
 		</div>
 
@@ -74,21 +78,21 @@
 		</div>
 		<div class="row" id="enemyRow">
 			<div class="col-md-2">
-				<div class="enemyContainer 0">
+				<div class="enemyContainer 0" id="enemy0">
 					<p class="charNameLine 0"></p>
 					<img class="charImgLine 0">
 					<p class="charHPCounter 0"></p>
 				</div>
 			</div>
 			<div class="col-md-2">
-				<div class="enemyContainer 1">
+				<div class="enemyContainer 1" id="enemy1">
 					<p class="charNameLine 1"></p>
 					<img class="charImgLine 1">
 					<p class="charHPCounter 1"></p>
 				</div>
 			</div>
 			<div class="col-md-2">
-				<div class="enemyContainer 2">
+				<div class="enemyContainer 2" id="enemy2">
 					<p class="charNameLine 2"></p>
 					<img class="charImgLine 2">
 					<p class="charHPCounter 2"></p>
