--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-2">
-			 	<div id="yourChar">
+			 	<div id="yourCharTarget">
 			 	<!--	<p id="yourCharName"></p>
 					<img id="yourCharImg">
 					<p id="yourCharHPCounter"></p> -->
@@ -79,23 +79,29 @@
 		<div class="row" id="enemyRow">
 			<div class="col-md-2">
 				<div class="enemyContainer 0" id="enemy0">
+					<div id="enemy0Target"></div>
+				<!--
 					<p class="charNameLine 0"></p>
 					<img class="charImgLine 0">
-					<p class="charHPCounter 0"></p>
+					<p class="charHPCounter 0"></p> -->
 				</div>
 			</div>
 			<div class="col-md-2">
 				<div class="enemyContainer 1" id="enemy1">
+					<div id="enemy0Target"></div>
+				<!--
 					<p class="charNameLine 1"></p>
 					<img class="charImgLine 1">
-					<p class="charHPCounter 1"></p>
+					<p class="charHPCounter 1"></p> -->
 				</div>
 			</div>
 			<div class="col-md-2">
 				<div class="enemyContainer 2" id="enemy2">
+					<div id="enemy2Target"></div>
+				<!--
 					<p class="charNameLine 2"></p>
 					<img class="charImgLine 2">
-					<p class="charHPCounter 2"></p>
+					<p class="charHPCounter 2"></p> -->
 				</div>
 			</div>
 		</div>
@@ -118,7 +124,9 @@
 		</div>
 		<div class="row">
 			<div class="col-md-2">
-				<div id="defenderContainer"></div>
+				<div id="defenderContainer">
+					<div id="defenderTarget"></div>
+				</div>
 			</div>
 		</div>
 
