...looks like this is as close as I'll actually get :/

--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
 		</div>
 		<div class="row" id="charSelectRow">
 			<div class="col-md-2">
-				<div class="charContainer">
+				<div class="charContainer" id="c0">
 					<p id="charNameLine0"></p>
 					<img id="charImgLine0">
 					<p id="charHPCounter0"></p>
 				</div>
 			</div>
 			<div class="col-md-2">
-				<div class="charContainer">
+				<div class="charContainer" id="c1">
 					<p id="charNameLine1"></p>
 					<img id="charImgLine1">
 					<p id="charHPCounter1"></p>
 				</div>
 			</div>
 			<div class="col-md-2">
-				<div class="charContainer">
+				<div class="charContainer" id="c2">
 					<p id="charNameLine2"></p>
 					<img id="charImgLine2">
 					<p id="charHPCounter2"></p>
 				</div>
 			</div>
 			<div class="col-md-2">
-				<div class="charContainer">
+				<div class="charContainer" id="c3">
 					<p id="charNameLine3"></p>
 					<img id="charImgLine3">
 					<p id="charHPCounter3"></p>
@@ -88,7 +88,7 @@
 			</div>
 			<div class="col-md-2">
 				<div class="enemyContainer 1" id="enemy1">
-					<div id="enemy0Target"></div>
+					<div id="enemy1Target"></div>
 				<!--
 					<p class="charNameLine 1"></p>
 					<img class="charImgLine 1">
